minimized overlap fix

--- a/src/assets/styles/app/sidebar/sidebar.scss
+++ b/src/assets/styles/app/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
   max-height: 100%;
   overflow: hidden;
   &.hide {
-    flex-basis: 3.64238%!important;
+    flex-basis: 44px!important;
   }
   .sidebar-wrap {
     flex: 1 1 100%;
